--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "component": "^1.1.0",
+    "leaflet": "^1.8.0",
     "ngx-highlightjs": "^4.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
